# BatchTopK

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  test_crosscoder.py  train_crosscoder.py
src/batchtopk/: __init__.py  config.py  sae.py  training.py
tests/: test_crosscoder.py
