[project]
name = "batchtopk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.1",
    "ipdb>=0.13.13",
    "numpy>=2.2.6",
    "pydantic>=2.11.5",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.11",
]
