[project]
name = "batchtopk"
version = "0.1.0"
description = "BatchTopK: Novel Sparse Autoencoders with batch-wise TopK activation"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Jason Benn", email = "jason@jasoncbenn.com" }]
keywords = ["sparse autoencoders", "interpretability", "neural networks", "topk", "batchtopk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.1",
    "numpy>=2.2.6",
    "pydantic>=2.11.5",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.11",
    "transformer-lens>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ipdb>=0.13.13",
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/jasoncbenn/BatchTopK"
Repository = "https://github.com/jasoncbenn/BatchTopK"
Issues = "https://github.com/jasoncbenn/BatchTopK/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
